# Bassenji

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  vcpkg.json
src/: Atom.cpp  Atom.h  CMakeLists.txt  Molecule.cpp  Molecule.h  main.cpp  xyz_grammar.h
src/IO/: ReaderFactory.cpp  ReaderFactory.h  WriterFactory.cpp  WriterFactory.h
src/IO/readers/: FileReader.h  XYZFileReader.cpp  XYZFileReader.h
src/IO/readers/grammar/: misc_grammar.h  xyz_grammar.h
src/IO/writers/: FileWriter.h  SeparateXYZFilesWriter.cpp  SeparateXYZFilesWriter.h  XYZFileWriter.cpp  XYZFileWriter.h
src/calculations/: RMSDTrajectoryProcessor.cpp  RMSDTrajectoryProcessor.h  TrajectoryProcessor.h
src/molecular/: Atom.cpp  Atom.h  Frame.cpp  Frame.h  Molecule.cpp  Molecule.h  Residiue.cpp  Residiue.h  Trajectory.cpp  Trajectory.h  TrajectoryBuilder.cpp  TrajectoryBuilder.h
src/molecular/include/: Atom.h  Molecule.h  TrajectoryBuilder.h
src/parsers/: Parser.h  XYZparser.cpp  XYZparser.h
src/parsers/grammar/: xyz_grammar.h
test/: AllTests.cpp  AtomTests.cpp  CMakeLists.txt  GrammarPrimitivesTests.cpp  MoleculeTests.cpp  ReaderFactoryTests.cpp  TrajectoryBuilderTest.cpp  WriterFactoryTests.cpp
